fix horizontal scrollbar

--- a/css/index.css
+++ b/css/index.css
@@ -11,7 +11,7 @@ html:before {
   position: relative;
   display: block;
   margin-bottom: -12px;
-  width: 100vw;
+  width: 100%;
   height: 6px;
   background: url("../imgs/rainbowmenu.svg");
 }
